fixed overflow for Messages

--- a/src/components/Form/styles.scss
+++ b/src/components/Form/styles.scss
@@ -3,6 +3,7 @@
   position: absolute;
   bottom: 0;
   width: 700px;
+  height: 75px;
 
   & > input {
     width: 100%;
