--- a/src/components/Messages/styles.scss
+++ b/src/components/Messages/styles.scss
@@ -1,5 +1,7 @@
 .messages {
   padding: 1.5rem;
+  max-height: calc(100vh - 75px);
+  overflow-y: auto;
 }
 
 .message {
